fix(datepicker): #54 header align when grouped field

--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -223,6 +223,7 @@ $datepicker-event-background-color: $grey-light !default;
     }
 
     .pagination-list {
+        flex-wrap: nowrap;
         .select {
             margin-left: 0.125rem;
             margin-right: 0.125rem;
